apps/wg-easy/statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  namespace: wg-easy
spec:
  replicas: 1
  strategy:
    type: Recreate
  serviceName: wg-easy
  selector:
    matchLabels:
      app.kubernetes.io/name: wg-easy
  template:
    metadata:
      name: wg-easy
      labels:
        app.kubernetes.io/name: wg-easy
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [
            {
              "name": "macvlan-dhcp",
              "namespace":"kube-system",
              "mac": "${WG_MACVLAN_MAC}"
            }
          ]
    spec:
      # securityContext:
      #   sysctls:
      #     - name: net.ipv4.ip_forward
      #       value: "1"
      #     - name: net.ipv6.conf.all.forwarding
      #       value: "1"
      containers:
        - name: wg-easy
          image: ghcr.io/wg-easy/wg-easy:15
          command:
            - /bin/sh
            - -c
            - |
              sysctl -w net.ipv4.ip_forward=1
              sysctl -w net.ipv6.conf.all.forwarding=1
              ln -sf /usr/sbin/iptables-nft /usr/sbin/iptables
              ln -sf /usr/sbin/ip6tables-nft /usr/sbin/ip6tables
              ln -sf /usr/sbin/iptables-nft-restore /usr/sbin/iptables-restore
              ln -sf /usr/sbin/ip6tables-nft-restore /usr/sbin/ip6tables-restore
              exec node server/index.mjs
          ports:
            - containerPort: 51820
              name: wg
              protocol: UDP
            - containerPort: 51821
              name: http
              protocol: TCP
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          volumeMounts:
            - name: config
              mountPath: /etc/wireguard
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wg-easy-storage-claim
