apps/wg-easy/vpn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-wireguard
  namespace: wg-easy
  labels:
    app.kubernetes.io/name: wg-easy
    public: "true"
spec:
  type: LoadBalancer
  # # essential for keeping client IP addresses visible to the pod
  # externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: wg-easy
  ports:
    - name: wireguard
      protocol: UDP
      port: 51820
      targetPort: 51820
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: PreferDualStack
