apps/wg-easy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wg-easy
  namespace: wg-easy
spec:
  hostnames:
    - wg-easy.f9k.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium
      namespace: gateway-default
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: wg-easy-ui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
